Optimize: Faster polling, exponential backoff, better precision
- Reduce mention check interval from 60s to 30s
- Reduce reminder check interval from 60s to 30s
- Add exponential backoff with jitter for rate limit handling
- Add scheduler statistics tracking and API endpoint
- Add rate limit configuration options
- Add jitter to prevent thundering herd on startup

--- a/render.yaml
+++ b/render.yaml
@@ -25,10 +25,18 @@ services:
       # Bot configuration
       - key: BOT_USERNAME
         value: RemindMeXplz
+      # Optimized intervals for paid tiers (30s each)
       - key: MENTION_CHECK_INTERVAL
-        value: "60"
+        value: "30"
       - key: REMINDER_CHECK_INTERVAL
-        value: "60"
+        value: "30"
+      # Rate limiting configuration
+      - key: RATE_LIMIT_MAX_RETRIES
+        value: "5"
+      - key: RATE_LIMIT_BASE_DELAY
+        value: "1.0"
+      - key: RATE_LIMIT_MAX_DELAY
+        value: "60.0"
       - key: TIMEZONE
         value: UTC
       # Database URL (automatically set by Render when using their PostgreSQL)
